# EPGP17Refresh

./: .gitignore  README.md  build.sh  db.sqlite3  main.py  manage.py  pyproject.toml  schema.yml
EPGP/: asgi.py  settings.py  urls.py  wsgi.py
api/: admin.py  apps.py  data.py  manager.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_batchinfo_employment_delete_courseinfo_and_more.py  0003_elective_alter_batchinfo_epgp_batch_and_more.py  0004_professor_alter_elective_area_and_more.py  0005_alter_sociallinks_instagram_and_more.py  0006_alter_elective_area_alter_professor_area.py  0007_alter_elective_area_alter_professor_area.py  0008_alter_sociallinks_instagram_alter_sociallinks_phone_and_more.py  0009_alter_sociallinks_other.py  0010_studyccenter_studycentrepoc.py  0011_rename_studyccenter_studycenter.py  0012_studycenter_pin.py  0013_remove_batchinfo_studycentercity_and_more.py
