[project]
name = "epgp17refresh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.3"
dependencies = [
    "django>=6.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "inflection>=0.5.1",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "uritemplate>=4.2.0",
]
